# thesis_ddm

./: .gitignore  Makefile  README.md  pyproject.toml  slurm_integrative_ddm_train.sh
directed_model/: directed_ddm_cross.stan
docs/source/: conf.py  index.rst
scripts/: additional_analysis_variance_vs_corr.py  directed_ddm_analyze_factorial.py  directed_ddm_analyze_factorial_ppc.py  directed_ddm_fit_factorial_parallel.py  directed_ddm_generate_factorial.py  install_cmdstan.py  integrative_ddm_analyze_results_factorial.py  integrative_ddm_generate_factorial_new_sigma.py  integrative_ddm_train.py  integrative_explorative_analysis.py  plot_true_gamma_lambda.py
shared/: cross_validation_empirical.py  plots.py
src/ddm/directed_model/: __init__.py  simulation_new_sigma_z.py  workflow.py
src/ddm/directed_model/analysis/: diagnostics.py  ppc.py  recovery.py
src/ddm/directed_model/inference/: stan.py
src/ddm/directed_model/inference/stan_models/: directed_ddm.stan
src/ddm/directed_model/io/: mat.py
src/ddm/directed_model/simulation/: __init__.py  conditions.py  core.py  dataset.py  priors.py  simulation.py  simulation_new_sigma_z_cross.py
src/ddm/integrative_model/: __init__.py  simulation.py  workflow.py
src/ddm/integrative_model/analysis/: sanity.py  sbc.py  training.py
src/ddm/integrative_model/io/: __init__.py  history.py
src/ddm/integrative_model/og/: analysis.py
src/ddm/integrative_model/simulation/: __init__.py  core.py  likelihood.py  priors.py
src/ddm/shared/: cross_validation.py  cross_validation_empirical.py  cross_validation_original.py
src/ddm/utils/: __init__.py  imports.py  rng.py
src/directed_model/: analysis.py
src/integrative_model/: simulation.py  training_history.py
